--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "autoprefixer": "^9.6.1",
     "axios": "^0.19.2",
     "babel-eslint": "^10.0.3",
+    "chai": "^4.3.6",
     "core-js": "^3.2.1",
     "cpy": "^8.1.0",
     "cypress": "^10.6.0",
@@ -41,6 +42,10 @@
     "execa": "^6.1.0",
     "gh-rate-limit": "^1.0.0",
     "gulp-wpdtrt-plugin-bump": "github:dotherightthing/gulp-wpdtrt-plugin-bump",
+    "mocha": "^10.0.0",
+    "mochawesome": "^7.1.3",
+    "mochawesome-merge": "^4.2.1",
+    "mochawesome-report-generator": "^6.2.0",
     "nodemon": "^2.0.2",
     "normalize-html-whitespace": "^1.0.0",
     "numeral": "^2.0.6",
@@ -57,13 +62,6 @@
     "stylelint-selector-bem-pattern": "^2.1.0",
     "tenon-node": "^0.4.1",
     "wordwrap": "^1.0.0"
-  },
-  "devDependencies": {
-    "chai": "^4.3.6",
-    "mocha": "^10.0.0",
-    "mochawesome": "^7.1.3",
-    "mochawesome-merge": "^4.2.1",
-    "mochawesome-report-generator": "^6.2.0"
   },
   "scripts": {
     "preinstall": "chmod a+x scripts/**/*.sh",
