--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "test:internal": "chmod a+x test/scripts/*.sh && ./test/scripts/teardown.sh && ./test/scripts/setup.sh && mocha --recursive \"./test/**/*.spec*\" --extension mjs --extension js --full-trace",
     "pretest": "node ./scripts/pretest/create-wp-test-environment.mjs",
     "test": "./scripts/test/phpunit.sh",
-    "test:js": "node ./scripts/test/cypress.mjs",
+    "test:js": "node ./scripts/test/cypress.mjs && open mochawesome-report/mochawesome.html",
     "version": "./scripts/changelog/changelog.sh && node ./scripts/version/plugin-bump.mjs",
     "postinstall": "./scripts/postinstall/config.sh && node ./scripts/postinstall/customise-config.mjs && ./scripts/postinstall/composer.sh && node ./scripts/postinstall/remaining-github-api-calls.mjs",
     "postuninstall": "./scripts/postuninstall/config.sh && ./scripts/postuninstall/composer.sh"
