--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint-plugin-json": "^1.4.0",
     "eslint-plugin-markdown": "^1.0.0",
     "execa": "^6.1.0",
+    "fs-extra": "^10.1.0",
     "gh-rate-limit": "^1.0.0",
     "gulp-wpdtrt-plugin-bump": "github:dotherightthing/gulp-wpdtrt-plugin-bump",
     "mocha": "^10.0.0",
