--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "execa": "^6.1.0",
     "fs-extra": "^10.1.0",
     "gh-rate-limit": "^1.0.0",
-    "gulp-wpdtrt-plugin-bump": "github:dotherightthing/gulp-wpdtrt-plugin-bump",
+    "gulp-wpdtrt-plugin-bump": "github:dotherightthing/gulp-wpdtrt-plugin-bump#semver:*",
     "mocha": "^10.0.0",
     "mochawesome": "^7.1.3",
     "mochawesome-merge": "^4.2.1",
